crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_synthesize.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: synth
extends: ~
metadata: ~
config: ~
phases:
  - name: audio_compat
    extend: false
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          Synthesize:
            name: Stereo AAC
            settings:
              - Codec: aac
              - Channels:
                  Ident: stereo
              - Source:
                  And:
                    - CodecIn:
                        - truehd
                        - dts_hd
                        - flac
                    - Channels:
                        - Ge
                        - 6
              - Bitrate: 192k
              - SkipIfExists:
                  And:
                    - CodecIn:
                        - aac
                    - Channels:
                        - Eq
                        - 2
                    - Not: Commentary
              - Title: Stereo (AAC)
              - Language: inherit
              - Position:
                  Ident: after_source
        span:
          start: 58
          end: 469
          line: 3
          col: 13
    span:
      start: 25
      end: 479
      line: 2
      col: 9
span:
  start: 0
  end: 485
  line: 1
  col: 1
