crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_when_block.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: when
extends: ~
metadata: ~
config: ~
phases:
  - name: validate
    extend: false
    skip_when: ~
    depends_on: []
    run_if: ~
    on_error: ~
    operations:
      - node:
          When:
            condition:
              And:
                - Exists:
                    target: audio
                    filter:
                      LangIn:
                        - jpn
                - Not:
                    Exists:
                      target: subtitle
                      filter:
                        LangIn:
                          - eng
            then_actions:
              - Warn: Japanese audio but no English subtitles
            else_actions: []
            span:
              start: 53
              end: 220
              line: 3
              col: 13
        span:
          start: 53
          end: 220
          line: 3
          col: 13
    span:
      start: 24
      end: 221
      line: 2
      col: 9
span:
  start: 0
  end: 227
  line: 1
  col: 1
