crates/voom-dsl/tests/snapshots/parser_snapshots__snapshot_when_else_block.snap
---
source: crates/voom-dsl/tests/parser_snapshots.rs
expression: ast
---
name: when-else
extends: ~
metadata: ~
config: ~
phases:
  - name: validate
    extend: false
    skip_when: ~
    depends_on: ~
    run_if: ~
    on_error: ~
    operations:
      - node:
          When:
            condition: IsDubbed
            then_actions:
              - Warn: File is dubbed
            else_actions:
              - Warn: File is not dubbed
            span:
              start: 58
              end: 189
              line: 3
              col: 13
        span:
          start: 58
          end: 189
          line: 3
          col: 13
    span:
      start: 29
      end: 199
      line: 2
      col: 9
span:
  start: 0
  end: 205
  line: 1
  col: 1
